--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2024"
 test-support = []
 
 [dependencies]
-async-graphql = "7"
+async-graphql = { version = "7", features = ["dynamic-schema"] }
 async-graphql-axum = "7"
+hive-router-query-planner = "1.0.0"
+graphql-tools = "0.4.0"
+graphql-parser = "0.4.1"
 axum = "0.8"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-util = "0.7"
@@ -20,6 +23,7 @@ url = "2"
 gix = { version = "0.73.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
 wasmtime = { version = "26", features = ["component-model"] }
 wasmtime-wasi = "26"
+wit-bindgen = { version = "0.32", default-features = false, features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
