--- a/packages/extensions/issues/Cargo.toml
+++ b/packages/extensions/issues/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib"]
 wit-bindgen = "0.36"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
