--- a/packages/integrations/issues/package.json
+++ b/packages/integrations/issues/package.json
@@ -8,8 +8,12 @@
 		".": "./src/index.ts"
 	},
 	"scripts": {
+		"build": "echo 'Integration package is consumed as source (no build needed)'",
+		"typecheck": "tsc --noEmit",
 		"codegen": "graphql-codegen -c codegen.ts",
-		"dev": "bun run codegen --watch"
+		"dev": "bun run codegen --watch",
+		"test": "vitest",
+		"test:ui": "vitest --ui"
 	},
 	"dependencies": {
 		"astro": "^5.14.1",
@@ -21,7 +25,12 @@
 		"@graphql-codegen/typescript": "^4.0.1",
 		"@graphql-codegen/typescript-operations": "^4.0.1",
 		"@graphql-codegen/typescript-graphql-request": "^6.0.1",
-		"graphql": "^16.8.1"
+		"@vitejs/plugin-vue": "^5.0.0",
+		"@vitest/ui": "^2.0.0",
+		"@vue/test-utils": "^2.4.0",
+		"graphql": "^16.8.1",
+		"happy-dom": "^15.0.0",
+		"vitest": "^2.0.0"
 	},
 	"forgepoint": {
 		"extensionName": "issues",
