--- a/packages/integrations/issues/tsconfig.json
+++ b/packages/integrations/issues/tsconfig.json
@@ -5,8 +5,9 @@
 		"declaration": true,
 		"declarationMap": true,
 		"outDir": "./dist",
-		"rootDir": "./src"
+		"rootDir": "./src",
+		"skipLibCheck": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist", "src/__tests__"]
 }
