--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2024"
 test-support = []
 
 [dependencies]
-async-graphql = { version = "7", features = ["dynamic-schema"] }
-async-graphql-axum = "7"
 hive-router-query-planner = "1.0.0"
+hive-router-plan-executor = "1.0.4"
 graphql-tools = "0.4.0"
 graphql-parser = "0.4.1"
 axum = "0.8"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
 tokio-util = "0.7"
+futures = "0.3"
 anyhow = "1"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
 cuid2 = "0.1"
@@ -27,6 +27,7 @@ cap-std = "3"
 wit-bindgen = { version = "0.32", default-features = false, features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sonic-rs = "0.5"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 async-graphql-parser = "7"
@@ -36,6 +37,7 @@ base64 = "0.22"
 ron = "0.8"
 oci-distribution = "0.11"
 sha2 = "0.10"
+bytes = "1"
 
 [dev-dependencies]
 tokio-test = "0.4"
