--- a/.github/workflows/build-extensions.yml
+++ b/.github/workflows/build-extensions.yml
@@ -16,6 +16,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: ""
     strategy:
       matrix:
         extension:
@@ -57,6 +59,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    env:
+      RUSTFLAGS: ""
     strategy:
       matrix:
         extension:
@@ -82,6 +86,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install oras CLI
+        uses: oras-project/setup-oras@v1
+        with:
+          version: v1.2.0
+
       - name: Extract version
         id: version
         working-directory: extensions/${{ matrix.extension }}/api
@@ -89,19 +98,29 @@ jobs:
           VERSION=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[0].version')
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Build OCI image
+      - name: Push WASM OCI artifact
         run: |
-          cat > Dockerfile <<EOF
-          FROM scratch
-          COPY ./artifacts/*.wasm /extension.wasm
-          EOF
-          docker buildx build \
-            --platform wasi/wasm \
-            --provenance=false \
-            --tag ghcr.io/${{ github.repository_owner }}/extensions/${{ matrix.extension }}:${{ steps.version.outputs.version }} \
-            --tag ghcr.io/${{ github.repository_owner }}/extensions/${{ matrix.extension }}:latest \
-            --push \
-            .
+          set -euo pipefail
+          WASM_FILE="$(find ./artifacts -name '*.wasm' -print -quit)"
+          if [ -z "${WASM_FILE}" ]; then
+            echo "No WASM artifact found in ./artifacts" >&2
+            exit 1
+          fi
+
+          IMAGE="ghcr.io/${{ github.repository_owner }}/extensions/${{ matrix.extension }}"
+          VERSION="${{ steps.version.outputs.version }}"
+
+          CONFIG_FILE="oci-config.json"
+          printf '{}' > "${CONFIG_FILE}"
+
+          oras push "${IMAGE}:${VERSION}" \
+            --artifact-type application/vnd.module.wasm.content.layer.v1+wasm \
+            --annotation org.opencontainers.image.title="${{ matrix.extension }}" \
+            --annotation org.opencontainers.image.version="${VERSION}" \
+            "${CONFIG_FILE}:application/vnd.oci.image.config.v1+json" \
+            "${WASM_FILE}:application/vnd.module.wasm.content.layer.v1+wasm"
+
+          oras tag "${IMAGE}:${VERSION}" latest
 
       - name: Generate build summary
         run: |
