--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
 		"test:e2e:ui": "playwright test --ui"
 	},
 	"dependencies": {
+		"@astrojs/check": "^0.9.4",
 		"@astrojs/tailwind": "^5.0.0",
 		"@astrojs/vue": "^5.0.0",
 		"@expressive-code/core": "^0.41.3",
@@ -23,6 +24,7 @@
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
 		"tailwindcss": "^3.4.14",
+		"typescript": "^5.9.3",
 		"vue": "^3.4.38"
 	},
 	"devDependencies": {
