fix: bunch of atproto fixes
# Conflicts:
#	Cargo.lock
#	server/Cargo.toml

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,5 @@
 # Public GraphQL endpoint for the forge server.
 PUBLIC_FORGE_GRAPHQL_URL="http://localhost:8000/graphql"
+# Optional: direct link to the server's auth login page.
+# If unset, the app derives it from PUBLIC_FORGE_GRAPHQL_URL by replacing /graphql with /auth/login
+PUBLIC_FORGE_AUTH_LOGIN_URL="http://localhost:8000/auth/login"
