--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,36 +1,38 @@
 {
-	"name": "forge-web",
-	"type": "module",
-	"version": "0.0.1",
-	"packageManager": "bun@1.1.30",
-	"scripts": {
-		"dev": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro",
-		"test": "vitest",
-		"test:ui": "vitest --ui",
-		"test:e2e": "playwright test",
-		"test:e2e:ui": "playwright test --ui"
-	},
-	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/tailwind": "^5.0.0",
-		"@astrojs/vue": "^5.0.0",
-		"@expressive-code/core": "^0.41.3",
-		"@expressive-code/plugin-line-numbers": "^0.41.3",
-		"@expressive-code/plugin-shiki": "^0.41.3",
-		"astro": "^5.14.1",
-		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.47",
-		"tailwindcss": "^3.4.14",
-		"typescript": "^5.9.3",
-		"vue": "^3.4.38"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.55.1",
-		"@tailwindcss/typography": "^0.5.19",
-		"@vitest/ui": "^2.0.0",
-		"vitest": "^2.0.0"
-	}
+  "name": "forge-web",
+  "type": "module",
+  "version": "0.0.1",
+  "packageManager": "bun@1.1.30",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "serve:ssr": "node ./dist/server/entry.mjs",
+    "astro": "astro",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
+  },
+  "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vue": "^5.0.0",
+    "@expressive-code/core": "^0.41.3",
+    "@expressive-code/plugin-line-numbers": "^0.41.3",
+    "@expressive-code/plugin-shiki": "^0.41.3",
+    "astro": "^5.14.1",
+    "@astrojs/node": "^8.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.9.3",
+    "vue": "^3.4.38"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.1",
+    "@tailwindcss/typography": "^0.5.19",
+    "@vitest/ui": "^2.0.0",
+    "vitest": "^2.0.0"
+  }
 }
