feat(tests): add blob:limit, symlink/submodule filter, and deepen-* trace-diff; run tests via Nix\n\n- Add partial-clone blob:limit test (verifies pack shrink + clone)\n- Add symlink/submodule filter edge-case test\n- Extend trace-diff with deepen-since and deepen-not scenarios\n- Ensure server invocations run in Nix for toolchain consistency\n- Update next.md with Phase B status and references to new tests

--- a/.github/workflows/git-smart-http-v2-parity.yml
+++ b/.github/workflows/git-smart-http-v2-parity.yml
@@ -61,6 +61,14 @@ jobs:
       - name: Rust backend — end-to-end
         run: nix develop --impure -c bash server/tests/git_http_v2_rust_backend.sh
 
+      - name: Partial clone — blob:none (rust)
+        continue-on-error: true
+        run: nix develop --impure -c bash server/tests/git_http_v2_partial_blob_none.sh
+
+      - name: Partial clone — tree:1 (rust)
+        continue-on-error: true
+        run: nix develop --impure -c bash server/tests/git_http_v2_filter_tree.sh
+
       - name: Packet trace diff (git vs rust)
         env:
           TRACE_SCENARIOS: "simple-clone shallow-clone incremental-fetch"
