--- a/crates/git-http/Cargo.toml
+++ b/crates/git-http/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1"
 axum = { version = "0.8" }
 bytes = "1"
+flate2 = "1"
 futures = "0.3"
 gix = "0.73.0"
 metrics = "0.23"
@@ -16,6 +17,7 @@ sha1 = "0.10"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "process", "sync"] }
 tokio-stream = "0.1"
 tokio-util = "0.7"
+tracing = "0.1"
 
 [dev-dependencies]
 tempfile = "3"
